force-app/main/default/objects/Property__c/Property__c.object-meta.xml
<CustomObject>
    <description>Represents a rental property (house, apartment, unit, etc.) managed by a landlord. Each property contains one or more rooms that can be rented to tenants.</description>
    <label>Property</label>
    <nameField>
        <label>Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Properties</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>