force-app/main/default/objects/Property__c/fields/Available_Rooms__c.field-meta.xml
<CustomField>
    <fullName>Available_Rooms__c</fullName>
    <description>Roll-up summary: number of rooms currently available for rent.</description>
    <label>Available Rooms</label>
    <summaryFilterItems>
        <field>Room__c.Status__c</field>
        <operation>equals</operation>
        <value>Available</value>
    </summaryFilterItems>
    <summaryForeignKey>Room__c.Property__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>