force-app/main/default/objects/Property__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City/suburb where the property is located.</description>
    <label>City / Suburb</label>
    <length>100</length>
    <type>Text</type>
</CustomField>