force-app/main/default/objects/Property__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country where the property is located.</description>
    <label>Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>