force-app/main/default/objects/Property__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>General description of the property, including notable features, rules, and amenities.</description>
    <label>Property Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>