force-app/main/default/objects/Property__c/fields/Landlord__c.field-meta.xml
<CustomField>
    <fullName>Landlord__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Account (Business or Person Account) representing the landlord/owner of this property. The Account may hold ABN and GST registration details used for invoice generation.</description>
    <label>Landlord Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Properties Owned</relationshipLabel>
    <relationshipName>Properties_Owned</relationshipName>
    <type>Lookup</type>
</CustomField>