force-app/main/default/objects/Property__c/fields/Occupied_Rooms__c.field-meta.xml
<CustomField>
    <fullName>Occupied_Rooms__c</fullName>
    <description>Roll-up summary: number of rooms currently occupied by tenants.</description>
    <label>Occupied Rooms</label>
    <summaryForeignKey>Room__c.Property__c</summaryForeignKey>
    <summaryFilterItems>
        <field>Room__c.Status__c</field>
        <operation>equals</operation>
        <value>Occupied</value>
    </summaryFilterItems>
    <summaryOperation>COUNT</summaryOperation>
    <type>Summary</type>
</CustomField>