force-app/main/default/objects/Property__c/fields/Postcode__c.field-meta.xml
<CustomField>
    <fullName>Postcode__c</fullName>
    <description>Postal code / ZIP code of the property.</description>
    <label>Postcode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>