force-app/main/default/objects/Property__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>State or territory where the property is located.</description>
    <label>State / Territory</label>
    <length>100</length>
    <type>Text</type>
</CustomField>