force-app/main/default/objects/Property__c/fields/Total_Rooms__c.field-meta.xml
<CustomField>
    <fullName>Total_Rooms__c</fullName>
    <description>Roll-up summary: total number of rooms in this property (all statuses).</description>
    <label>Total Rooms</label>
    <summaryForeignKey>Room__c.Property__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>